2000-05-29  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/lyx_main.C (easyParse): simplify the code by factoring the
	part that removes parameters from the command line.
	(LyX): check wether wrong command line options have been given.

2000-05-29  Lior Silberman <slior@math.huji.ac.il>

	* src/lyx_main.C : add support for specifying user LyX
	directory via command line option -userdir.

2000-05-26 Dekel Tsur  <dekel@math.tau.ac.il>

	* src/menus.C (Add_to_toc_menu): Limit the number of popups, and
	the number of items per popup.
	(Add_to_refs_menu): Ditto.
	
2000-05-26  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/lyxparagraph.h: renamed ClearParagraph() to
	StripLeadingSpaces() and moved it to paragraph.C. We pass the
	textclass as parameter, and do nothing if free_spacing is
	true. This fixes part of the line-delete-forward problems.

	* src/CutAndPaste.C (cutSelection): use StripLeadingSpaces.
	(pasteSelection): ditto.
	(SwitchLayoutsBetweenClasses): more translatable strings.

	* src/text2.C (CutSelection): use StripLeadingSpaces.
	(PasteSelection): ditto.
	(DeleteEmptyParagraphMechanism): ditto.

2000-05-26  Juergen Vigna  <jug@sad.it>

	* src/TabularLayout.C (TabularOptionsCB): removed delete-table as this
	is not needed in tabular insets.

	* src/insets/insettabular.C (TabularFeatures): added missing features.

	* src/tabular.C (DeleteColumn):
	(AppendColumn): 
	(AppendRow): implemented this functions
	(cellsturct::operator=): clone the inset too; 

2000-05-23  Juergen Vigna  <jug@sad.it>

	* src/insets/insettabular.C (LocalDispatch): better selection support
	when having multicolumn-cells.

2000-05-26  Jose Abilio Oliveira Matos <jamatos@novalis.fc.up.pt>

	* lib/layouts/linuxdoc.layout: fix indentation of paragraphs.

2000-05-25  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/ColorHandler.C (getGCForeground): put more test into _()

	* lib/examples/eu_splash.lyx: new file (Basque translation) from
	Dooteo. 
